add back fnd_ht column for no unc estimation

--- a/workflow/notebooks/benchmark_ensemble.ipynb
+++ b/workflow/notebooks/benchmark_ensemble.ipynb
@@ -111,15 +111,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 234,
    "id": "59719ccf-11fb-4507-bc0a-86cf020e58d7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T20:09:48.625657Z",
-     "iopub.status.busy": "2023-12-05T20:09:48.625488Z",
-     "iopub.status.idle": "2023-12-05T20:09:49.271848Z",
-     "shell.execute_reply": "2023-12-05T20:09:49.271142Z",
-     "shell.execute_reply.started": "2023-12-05T20:09:48.625640Z"
+     "iopub.execute_input": "2023-12-05T22:00:46.802416Z",
+     "iopub.status.busy": "2023-12-05T22:00:46.802039Z",
+     "iopub.status.idle": "2023-12-05T22:00:48.417305Z",
+     "shell.execute_reply": "2023-12-05T22:00:48.416382Z",
+     "shell.execute_reply.started": "2023-12-05T22:00:46.802377Z"
     }
    },
    "outputs": [],
@@ -136,15 +136,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 235,
    "id": "5fcd531e-6d19-4f32-908e-04184401466e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T20:09:49.272451Z",
-     "iopub.status.busy": "2023-12-05T20:09:49.272312Z",
-     "iopub.status.idle": "2023-12-05T20:09:49.486254Z",
-     "shell.execute_reply": "2023-12-05T20:09:49.485522Z",
-     "shell.execute_reply.started": "2023-12-05T20:09:49.272436Z"
+     "iopub.execute_input": "2023-12-05T22:00:48.419040Z",
+     "iopub.status.busy": "2023-12-05T22:00:48.418722Z",
+     "iopub.status.idle": "2023-12-05T22:00:48.778487Z",
+     "shell.execute_reply": "2023-12-05T22:00:48.777520Z",
+     "shell.execute_reply.started": "2023-12-05T22:00:48.419004Z"
     }
    },
    "outputs": [],
@@ -180,15 +180,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 236,
    "id": "e57e6ce7-c2d3-4fa4-9613-a52c31e004a5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T20:09:49.487718Z",
-     "iopub.status.busy": "2023-12-05T20:09:49.487553Z",
-     "iopub.status.idle": "2023-12-05T20:09:49.506504Z",
-     "shell.execute_reply": "2023-12-05T20:09:49.505835Z",
-     "shell.execute_reply.started": "2023-12-05T20:09:49.487702Z"
+     "iopub.execute_input": "2023-12-05T22:00:48.779989Z",
+     "iopub.status.busy": "2023-12-05T22:00:48.779669Z",
+     "iopub.status.idle": "2023-12-05T22:00:48.815461Z",
+     "shell.execute_reply": "2023-12-05T22:00:48.814570Z",
+     "shell.execute_reply.started": "2023-12-05T22:00:48.779954Z"
     }
    },
    "outputs": [],
@@ -215,7 +215,7 @@
     "# Normally we would only keep the below, but I'm commenting those out\n",
     "# because we also want to keep found_ht\n",
     "# keep_cols = ['fd_id', 'occtype', 'val_struct']\n",
-    "keep_cols = ['fd_id', 'occtype', 'val_struct', 'found_type']\n",
+    "keep_cols = ['fd_id', 'occtype', 'val_struct', 'found_type', 'found_ht']\n",
     "nsi_res = nsi_struct[keep_cols]\n",
     "\n",
     "# Let's merge in refs into nsi_res\n",
@@ -258,15 +258,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 237,
    "id": "ada9027e-c015-4fec-bee8-cb05132e88b4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T20:09:49.508718Z",
-     "iopub.status.busy": "2023-12-05T20:09:49.508593Z",
-     "iopub.status.idle": "2023-12-05T20:09:49.530003Z",
-     "shell.execute_reply": "2023-12-05T20:09:49.529330Z",
-     "shell.execute_reply.started": "2023-12-05T20:09:49.508704Z"
+     "iopub.execute_input": "2023-12-05T22:00:48.817600Z",
+     "iopub.status.busy": "2023-12-05T22:00:48.817267Z",
+     "iopub.status.idle": "2023-12-05T22:00:48.843354Z",
+     "shell.execute_reply": "2023-12-05T22:00:48.842354Z",
+     "shell.execute_reply.started": "2023-12-05T22:00:48.817563Z"
     }
    },
    "outputs": [],
@@ -292,15 +292,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 238,
    "id": "941ef1b8-8c14-4ba0-9ba4-879fe974dbf0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T20:09:49.530615Z",
-     "iopub.status.busy": "2023-12-05T20:09:49.530485Z",
-     "iopub.status.idle": "2023-12-05T20:09:49.555004Z",
-     "shell.execute_reply": "2023-12-05T20:09:49.554373Z",
-     "shell.execute_reply.started": "2023-12-05T20:09:49.530602Z"
+     "iopub.execute_input": "2023-12-05T22:00:48.844770Z",
+     "iopub.status.busy": "2023-12-05T22:00:48.844472Z",
+     "iopub.status.idle": "2023-12-05T22:00:48.866875Z",
+     "shell.execute_reply": "2023-12-05T22:00:48.866018Z",
+     "shell.execute_reply.started": "2023-12-05T22:00:48.844735Z"
     }
    },
    "outputs": [],
@@ -385,15 +385,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 239,
    "id": "f63184d1-481b-411b-a2d6-7f192d8bb8c7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T20:09:49.556051Z",
-     "iopub.status.busy": "2023-12-05T20:09:49.555902Z",
-     "iopub.status.idle": "2023-12-05T20:09:49.579208Z",
-     "shell.execute_reply": "2023-12-05T20:09:49.578470Z",
-     "shell.execute_reply.started": "2023-12-05T20:09:49.556036Z"
+     "iopub.execute_input": "2023-12-05T22:00:48.915938Z",
+     "iopub.status.busy": "2023-12-05T22:00:48.915618Z",
+     "iopub.status.idle": "2023-12-05T22:00:48.939268Z",
+     "shell.execute_reply": "2023-12-05T22:00:48.938260Z",
+     "shell.execute_reply.started": "2023-12-05T22:00:48.915903Z"
     }
    },
    "outputs": [],
@@ -429,15 +429,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 240,
    "id": "fc9cbc33-bd3c-4379-9dc8-edabb73545f7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T20:09:50.174893Z",
-     "iopub.status.busy": "2023-12-05T20:09:50.174648Z",
-     "iopub.status.idle": "2023-12-05T20:09:50.196704Z",
-     "shell.execute_reply": "2023-12-05T20:09:50.195597Z",
-     "shell.execute_reply.started": "2023-12-05T20:09:50.174873Z"
+     "iopub.execute_input": "2023-12-05T22:00:49.277645Z",
+     "iopub.status.busy": "2023-12-05T22:00:49.277123Z",
+     "iopub.status.idle": "2023-12-05T22:00:49.322750Z",
+     "shell.execute_reply": "2023-12-05T22:00:49.321114Z",
+     "shell.execute_reply.started": "2023-12-05T22:00:49.277590Z"
     }
    },
    "outputs": [],
@@ -470,15 +470,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 241,
    "id": "db2b3e0d-7253-45b0-9eb0-88b5acd96bbf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T21:38:37.217851Z",
-     "iopub.status.busy": "2023-12-05T21:38:37.216371Z",
-     "iopub.status.idle": "2023-12-05T21:38:37.323194Z",
-     "shell.execute_reply": "2023-12-05T21:38:37.321383Z",
-     "shell.execute_reply.started": "2023-12-05T21:38:37.217720Z"
+     "iopub.execute_input": "2023-12-05T22:00:49.629772Z",
+     "iopub.status.busy": "2023-12-05T22:00:49.628327Z",
+     "iopub.status.idle": "2023-12-05T22:00:49.724588Z",
+     "shell.execute_reply": "2023-12-05T22:00:49.722968Z",
+     "shell.execute_reply.started": "2023-12-05T22:00:49.629644Z"
     }
    },
    "outputs": [],
@@ -509,15 +509,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 242,
    "id": "73c0b6e3-68e3-447d-ba42-a70f1a5a0421",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T20:09:51.756684Z",
-     "iopub.status.busy": "2023-12-05T20:09:51.755663Z",
-     "iopub.status.idle": "2023-12-05T20:09:51.786947Z",
-     "shell.execute_reply": "2023-12-05T20:09:51.785758Z",
-     "shell.execute_reply.started": "2023-12-05T20:09:51.756636Z"
+     "iopub.execute_input": "2023-12-05T22:00:49.980528Z",
+     "iopub.status.busy": "2023-12-05T22:00:49.978669Z",
+     "iopub.status.idle": "2023-12-05T22:00:50.041441Z",
+     "shell.execute_reply": "2023-12-05T22:00:50.039694Z",
+     "shell.execute_reply.started": "2023-12-05T22:00:49.980401Z"
     }
    },
    "outputs": [],
@@ -544,15 +544,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 243,
    "id": "d28457a0-b693-4514-b38e-e2ee0a9f8742",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T21:44:53.592258Z",
-     "iopub.status.busy": "2023-12-05T21:44:53.590757Z",
-     "iopub.status.idle": "2023-12-05T21:44:58.803082Z",
-     "shell.execute_reply": "2023-12-05T21:44:58.802178Z",
-     "shell.execute_reply.started": "2023-12-05T21:44:53.592129Z"
+     "iopub.execute_input": "2023-12-05T22:00:50.172826Z",
+     "iopub.status.busy": "2023-12-05T22:00:50.171370Z",
+     "iopub.status.idle": "2023-12-05T22:00:55.232797Z",
+     "shell.execute_reply": "2023-12-05T22:00:55.231910Z",
+     "shell.execute_reply.started": "2023-12-05T22:00:50.172700Z"
     }
    },
    "outputs": [
@@ -596,15 +596,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 244,
    "id": "4c4ec57b-c9d2-42d0-b7a1-6cc809b52561",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T21:44:58.804762Z",
-     "iopub.status.busy": "2023-12-05T21:44:58.804483Z",
-     "iopub.status.idle": "2023-12-05T21:44:58.824382Z",
-     "shell.execute_reply": "2023-12-05T21:44:58.823607Z",
-     "shell.execute_reply.started": "2023-12-05T21:44:58.804731Z"
+     "iopub.execute_input": "2023-12-05T22:00:55.234525Z",
+     "iopub.status.busy": "2023-12-05T22:00:55.234248Z",
+     "iopub.status.idle": "2023-12-05T22:00:55.254327Z",
+     "shell.execute_reply": "2023-12-05T22:00:55.253536Z",
+     "shell.execute_reply.started": "2023-12-05T22:00:55.234495Z"
     }
    },
    "outputs": [],
@@ -679,15 +679,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 245,
    "id": "9da0470a-5553-47bb-97ab-ac937aef3020",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T21:44:58.825503Z",
-     "iopub.status.busy": "2023-12-05T21:44:58.825250Z",
-     "iopub.status.idle": "2023-12-05T21:46:39.092293Z",
-     "shell.execute_reply": "2023-12-05T21:46:39.091189Z",
-     "shell.execute_reply.started": "2023-12-05T21:44:58.825474Z"
+     "iopub.execute_input": "2023-12-05T22:00:55.255502Z",
+     "iopub.status.busy": "2023-12-05T22:00:55.255244Z",
+     "iopub.status.idle": "2023-12-05T22:02:36.687264Z",
+     "shell.execute_reply": "2023-12-05T22:02:36.686165Z",
+     "shell.execute_reply.started": "2023-12-05T22:00:55.255473Z"
     }
    },
    "outputs": [
@@ -859,15 +859,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 246,
    "id": "d124645c-368f-4b45-b114-df8731e83aa5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T21:46:39.094708Z",
-     "iopub.status.busy": "2023-12-05T21:46:39.094414Z",
-     "iopub.status.idle": "2023-12-05T21:46:46.585073Z",
-     "shell.execute_reply": "2023-12-05T21:46:46.584186Z",
-     "shell.execute_reply.started": "2023-12-05T21:46:39.094674Z"
+     "iopub.execute_input": "2023-12-05T22:02:36.689798Z",
+     "iopub.status.busy": "2023-12-05T22:02:36.689459Z",
+     "iopub.status.idle": "2023-12-05T22:02:45.537202Z",
+     "shell.execute_reply": "2023-12-05T22:02:45.536313Z",
+     "shell.execute_reply.started": "2023-12-05T22:02:36.689764Z"
     }
    },
    "outputs": [
@@ -918,15 +918,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 247,
    "id": "003f5629-dbc4-4da1-b408-5a0f6b96351f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T21:46:46.586355Z",
-     "iopub.status.busy": "2023-12-05T21:46:46.586087Z",
-     "iopub.status.idle": "2023-12-05T21:53:24.813825Z",
-     "shell.execute_reply": "2023-12-05T21:53:24.812774Z",
-     "shell.execute_reply.started": "2023-12-05T21:46:46.586325Z"
+     "iopub.execute_input": "2023-12-05T22:02:45.538475Z",
+     "iopub.status.busy": "2023-12-05T22:02:45.538188Z",
+     "iopub.status.idle": "2023-12-05T22:09:33.100574Z",
+     "shell.execute_reply": "2023-12-05T22:09:33.099537Z",
+     "shell.execute_reply.started": "2023-12-05T22:02:45.538442Z"
     }
    },
    "outputs": [
@@ -1113,141 +1113,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
-   "id": "36d17a3f-0428-4ae9-8e0e-7bff775c94c2",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-12-05T21:44:11.319771Z",
-     "iopub.status.busy": "2023-12-05T21:44:11.318114Z",
-     "iopub.status.idle": "2023-12-05T21:44:11.403184Z",
-     "shell.execute_reply": "2023-12-05T21:44:11.401900Z",
-     "shell.execute_reply.started": "2023-12-05T21:44:11.319675Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>rel_dam_001</th>\n",
-       "      <th>rel_dam_001</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.109569</td>\n",
-       "      <td>0.049621</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.118292</td>\n",
-       "      <td>0.240095</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.089747</td>\n",
-       "      <td>0.095902</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.304506</td>\n",
-       "      <td>0.342093</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.132197</td>\n",
-       "      <td>0.092615</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2309995</th>\n",
-       "      <td>0.167914</td>\n",
-       "      <td>0.188438</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2309996</th>\n",
-       "      <td>0.049742</td>\n",
-       "      <td>0.030801</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2309997</th>\n",
-       "      <td>0.073241</td>\n",
-       "      <td>0.061083</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2309998</th>\n",
-       "      <td>0.061405</td>\n",
-       "      <td>0.056964</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2309999</th>\n",
-       "      <td>0.069146</td>\n",
-       "      <td>0.085102</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2310000 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         rel_dam_001  rel_dam_001\n",
-       "0           0.109569     0.049621\n",
-       "1           0.118292     0.240095\n",
-       "2           0.089747     0.095902\n",
-       "3           0.304506     0.342093\n",
-       "4           0.132197     0.092615\n",
-       "...              ...          ...\n",
-       "2309995     0.167914     0.188438\n",
-       "2309996     0.049742     0.030801\n",
-       "2309997     0.073241     0.061083\n",
-       "2309998     0.061405     0.056964\n",
-       "2309999     0.069146     0.085102\n",
-       "\n",
-       "[2310000 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 226,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ens_df[col]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 248,
    "id": "a51a9926-7c09-4d66-b60d-92a3ea946afd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T19:01:42.250995Z",
-     "iopub.status.busy": "2023-12-05T19:01:42.250859Z",
-     "iopub.status.idle": "2023-12-05T19:02:22.193049Z",
-     "shell.execute_reply": "2023-12-05T19:02:22.192284Z",
-     "shell.execute_reply.started": "2023-12-05T19:01:42.250982Z"
+     "iopub.execute_input": "2023-12-05T22:09:33.102207Z",
+     "iopub.status.busy": "2023-12-05T22:09:33.101913Z",
+     "iopub.status.idle": "2023-12-05T22:10:16.010841Z",
+     "shell.execute_reply": "2023-12-05T22:10:16.009310Z",
+     "shell.execute_reply.started": "2023-12-05T22:09:33.102173Z"
     }
    },
    "outputs": [],
@@ -1290,15 +1164,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 249,
    "id": "ba65bf86-18ac-42af-b769-6dbf1b8b5ea4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T19:02:22.193956Z",
-     "iopub.status.busy": "2023-12-05T19:02:22.193803Z",
-     "iopub.status.idle": "2023-12-05T19:02:22.275106Z",
-     "shell.execute_reply": "2023-12-05T19:02:22.274418Z",
-     "shell.execute_reply.started": "2023-12-05T19:02:22.193942Z"
+     "iopub.execute_input": "2023-12-05T22:10:16.016237Z",
+     "iopub.status.busy": "2023-12-05T22:10:16.014521Z",
+     "iopub.status.idle": "2023-12-05T22:10:16.277257Z",
+     "shell.execute_reply": "2023-12-05T22:10:16.276331Z",
+     "shell.execute_reply.started": "2023-12-05T22:10:16.016065Z"
     }
    },
    "outputs": [
