elevation cost updates, including bldgtype variable

--- a/workflow/notebooks/benchmark_ensemble.ipynb
+++ b/workflow/notebooks/benchmark_ensemble.ipynb
@@ -180,6 +180,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "id": "d5d0d0c5-b267-4ed5-bbc0-fa856fad5f1f",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-12-27T17:45:31.206454Z",
+     "iopub.status.busy": "2023-12-27T17:45:31.206187Z",
+     "iopub.status.idle": "2023-12-27T17:45:31.757376Z",
+     "shell.execute_reply": "2023-12-27T17:45:31.755968Z",
+     "shell.execute_reply.started": "2023-12-27T17:45:31.206434Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['fd_id', 'occtype', 'found_type', 'cbfips', 'ftprntsrc', 'found_ht',\n",
+       "       'val_struct', 'sqft', 'val_cont', 'source', 'firmzone', 'ground_elv_m',\n",
+       "       'geometry'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nsi_struct.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 41,
    "id": "e57e6ce7-c2d3-4fa4-9613-a52c31e004a5",
    "metadata": {
@@ -215,7 +247,7 @@
     "# Normally we would only keep the below, but I'm commenting those out\n",
     "# because we also want to keep found_ht\n",
     "# keep_cols = ['fd_id', 'occtype', 'val_struct']\n",
-    "keep_cols = ['fd_id', 'occtype', 'val_struct',\n",
+    "keep_cols = ['fd_id', 'occtype', 'val_struct', 'bldgtype',\n",
     "             'found_type', 'found_ht', 'sqft']\n",
     "nsi_res = nsi_struct[keep_cols]\n",
     "\n",
@@ -1143,12 +1175,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "a51a9926-7c09-4d66-b60d-92a3ea946afd",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-12-27T17:39:58.761814Z",
-     "iopub.status.busy": "2023-12-27T17:39:58.761673Z"
+     "iopub.status.busy": "2023-12-27T17:39:58.761673Z",
+     "iopub.status.idle": "2023-12-27T17:40:47.779499Z",
+     "shell.execute_reply": "2023-12-27T17:40:47.777602Z",
+     "shell.execute_reply.started": "2023-12-27T17:39:58.761801Z"
     }
    },
    "outputs": [],
@@ -1197,10 +1232,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "ba65bf86-18ac-42af-b769-6dbf1b8b5ea4",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-12-27T17:40:47.781032Z",
+     "iopub.status.busy": "2023-12-27T17:40:47.780841Z",
+     "iopub.status.idle": "2023-12-27T17:40:47.916466Z",
+     "shell.execute_reply": "2023-12-27T17:40:47.915637Z",
+     "shell.execute_reply.started": "2023-12-27T17:40:47.781015Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimate Losses for Hazus Default, RP: 001\n",
+      "Estimate Losses for Hazus Default, RP: 002\n",
+      "Estimate Losses for Hazus Default, RP: 005\n",
+      "Estimate Losses for Hazus Default, RP: 010\n",
+      "Estimate Losses for Hazus Default, RP: 015\n",
+      "Estimate Losses for Hazus Default, RP: 020\n",
+      "Estimate Losses for Hazus Default, RP: 025\n",
+      "Estimate Losses for Hazus Default, RP: 050\n",
+      "Estimate Losses for Hazus Default, RP: 075\n",
+      "Estimate Losses for Hazus Default, RP: 100\n",
+      "Estimate Losses for Hazus Default, RP: 200\n",
+      "Estimate Losses for Hazus Default, RP: 500\n"
+     ]
+    }
+   ],
    "source": [
     "# We are taking the full_df dataframe values as-is\n",
     "# to get eal estimates for our benchmark\n",
