--- a/workflow/notebooks/optimal_elev.ipynb
+++ b/workflow/notebooks/optimal_elev.ipynb
@@ -191,7 +191,8 @@
     "# elevation cost estimation\n",
     "# We need sqft because it's a key variable for\n",
     "# elevation cost estimation\n",
-    "sub_cols = ['fd_id', 'found_type', 'sqft']\n",
+    "# We need bldgtype for elevation cost estimation, too\n",
+    "sub_cols = ['fd_id', 'found_type', 'sqft', 'bldgtype']\n",
     "# We need to add depth_ffe_* columns \n",
     "depth_ffe_cols = ['depth_ffe_' + x for x in RET_PERS]\n",
     "sub_cols = sub_cols + depth_ffe_cols\n",
@@ -211,56 +212,6 @@
     "# Subset ens_df and bench_df on their column lists\n",
     "ens_df = ens_df.loc[ens_cols]\n",
     "bench_df = bench_df.loc[bench_cols]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "ee4d9386-2579-4e9c-8e9b-182079ddb2cc",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-12-27T17:31:54.281668Z",
-     "iopub.status.busy": "2023-12-27T17:31:54.281263Z",
-     "iopub.status.idle": "2023-12-27T17:31:54.887845Z",
-     "shell.execute_reply": "2023-12-27T17:31:54.886264Z",
-     "shell.execute_reply.started": "2023-12-27T17:31:54.281633Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['fd_id', 'occtype', 'val_struct', 'found_type', 'found_ht', 'tract_id',\n",
-       "       'bg_id', 'zcta_id', 'fz_ddf', 'val_s', 'bld_types', 'hazus_types',\n",
-       "       'ffe', '001', '002', '005', '010', '015', '020', '025', '050', '075',\n",
-       "       '100', '200', '500', 'haz_rel_dam_001', 'haz_rel_dam_002',\n",
-       "       'haz_rel_dam_005', 'haz_rel_dam_010', 'haz_rel_dam_015',\n",
-       "       'haz_rel_dam_020', 'haz_rel_dam_025', 'haz_rel_dam_050',\n",
-       "       'haz_rel_dam_075', 'haz_rel_dam_100', 'haz_rel_dam_200',\n",
-       "       'haz_rel_dam_500', 'naccs_rel_dam_001', 'naccs_rel_dam_002',\n",
-       "       'naccs_rel_dam_005', 'naccs_rel_dam_010', 'naccs_rel_dam_015',\n",
-       "       'naccs_rel_dam_020', 'naccs_rel_dam_025', 'naccs_rel_dam_050',\n",
-       "       'naccs_rel_dam_075', 'naccs_rel_dam_100', 'naccs_rel_dam_200',\n",
-       "       'naccs_rel_dam_500', 'depth_ffe_001', 'depth_ffe_002', 'depth_ffe_005',\n",
-       "       'depth_ffe_010', 'depth_ffe_015', 'depth_ffe_020', 'depth_ffe_025',\n",
-       "       'depth_ffe_050', 'depth_ffe_075', 'depth_ffe_100', 'depth_ffe_200',\n",
-       "       'depth_ffe_500', 'haz_loss_001', 'haz_loss_002', 'haz_loss_005',\n",
-       "       'haz_loss_010', 'haz_loss_015', 'haz_loss_020', 'haz_loss_025',\n",
-       "       'haz_loss_050', 'haz_loss_075', 'haz_loss_100', 'haz_loss_200',\n",
-       "       'haz_loss_500', 'naccs_loss_001', 'naccs_loss_002', 'naccs_loss_005',\n",
-       "       'naccs_loss_010', 'naccs_loss_015', 'naccs_loss_020', 'naccs_loss_025',\n",
-       "       'naccs_loss_050', 'naccs_loss_075', 'naccs_loss_100', 'naccs_loss_200',\n",
-       "       'naccs_loss_500', 'haz_eal', 'naccs_eal', 'sow_ind'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ens_df.columns"
    ]
   },
   {
