--- a/workflow/notebooks/process_ev.ipynb
+++ b/workflow/notebooks/process_ev.ipynb
@@ -2,27 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "07ae3738-6ce1-4625-9777-cb42c218896b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T19:05:07.364544Z",
-     "iopub.status.busy": "2023-12-05T19:05:07.363999Z",
-     "iopub.status.idle": "2023-12-05T19:05:07.918763Z",
-     "shell.execute_reply": "2023-12-05T19:05:07.917201Z",
-     "shell.execute_reply.started": "2023-12-05T19:05:07.364498Z"
+     "iopub.execute_input": "2023-12-27T17:46:53.632343Z",
+     "iopub.status.busy": "2023-12-27T17:46:53.631794Z",
+     "iopub.status.idle": "2023-12-27T17:46:53.854193Z",
+     "shell.execute_reply": "2023-12-27T17:46:53.852729Z",
+     "shell.execute_reply.started": "2023-12-27T17:46:53.632291Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -30,15 +21,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "8cf7aaad-086f-40a9-92e4-374d1efb7495",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T19:05:07.921512Z",
-     "iopub.status.busy": "2023-12-05T19:05:07.921055Z",
-     "iopub.status.idle": "2023-12-05T19:05:07.961174Z",
-     "shell.execute_reply": "2023-12-05T19:05:07.959390Z",
-     "shell.execute_reply.started": "2023-12-05T19:05:07.921469Z"
+     "iopub.execute_input": "2023-12-27T17:46:53.926737Z",
+     "iopub.status.busy": "2023-12-27T17:46:53.926193Z",
+     "iopub.status.idle": "2023-12-27T17:46:55.086136Z",
+     "shell.execute_reply": "2023-12-27T17:46:55.085046Z",
+     "shell.execute_reply.started": "2023-12-27T17:46:53.926685Z"
     }
    },
    "outputs": [],
@@ -63,15 +54,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "1ae98b55-a0e0-4e75-b3f3-b9dcc294234c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T19:05:07.963371Z",
-     "iopub.status.busy": "2023-12-05T19:05:07.962909Z",
-     "iopub.status.idle": "2023-12-05T19:05:07.996737Z",
-     "shell.execute_reply": "2023-12-05T19:05:07.995024Z",
-     "shell.execute_reply.started": "2023-12-05T19:05:07.963329Z"
+     "iopub.execute_input": "2023-12-27T17:46:55.087421Z",
+     "iopub.status.busy": "2023-12-27T17:46:55.087163Z",
+     "iopub.status.idle": "2023-12-27T17:46:55.102512Z",
+     "shell.execute_reply": "2023-12-27T17:46:55.101501Z",
+     "shell.execute_reply.started": "2023-12-27T17:46:55.087403Z"
     }
    },
    "outputs": [],
@@ -105,11 +96,11 @@
    "id": "462240d3-88c1-461a-bcbd-22f0585387f9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T18:49:56.531161Z",
-     "iopub.status.busy": "2023-12-05T18:49:56.530681Z",
-     "iopub.status.idle": "2023-12-05T18:49:56.565872Z",
-     "shell.execute_reply": "2023-12-05T18:49:56.564075Z",
-     "shell.execute_reply.started": "2023-12-05T18:49:56.531115Z"
+     "iopub.execute_input": "2023-12-27T17:46:55.541228Z",
+     "iopub.status.busy": "2023-12-27T17:46:55.540995Z",
+     "iopub.status.idle": "2023-12-27T17:46:55.569029Z",
+     "shell.execute_reply": "2023-12-27T17:46:55.567142Z",
+     "shell.execute_reply.started": "2023-12-27T17:46:55.541205Z"
     }
    },
    "outputs": [],
@@ -125,11 +116,11 @@
    "id": "4108629a-beb2-44ba-94a2-634f69a44dad",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T18:49:56.569576Z",
-     "iopub.status.busy": "2023-12-05T18:49:56.569075Z",
-     "iopub.status.idle": "2023-12-05T18:49:56.650538Z",
-     "shell.execute_reply": "2023-12-05T18:49:56.649026Z",
-     "shell.execute_reply.started": "2023-12-05T18:49:56.569505Z"
+     "iopub.execute_input": "2023-12-27T17:46:55.937279Z",
+     "iopub.status.busy": "2023-12-27T17:46:55.936044Z",
+     "iopub.status.idle": "2023-12-27T17:46:55.994519Z",
+     "shell.execute_reply": "2023-12-27T17:46:55.992802Z",
+     "shell.execute_reply.started": "2023-12-27T17:46:55.937209Z"
     }
    },
    "outputs": [],
@@ -146,11 +137,11 @@
    "id": "b08a969c-fd99-4dae-ae15-041f5be159f4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T18:49:56.652592Z",
-     "iopub.status.busy": "2023-12-05T18:49:56.652135Z",
-     "iopub.status.idle": "2023-12-05T18:49:58.917611Z",
-     "shell.execute_reply": "2023-12-05T18:49:58.916489Z",
-     "shell.execute_reply.started": "2023-12-05T18:49:56.652545Z"
+     "iopub.execute_input": "2023-12-27T17:46:56.342012Z",
+     "iopub.status.busy": "2023-12-27T17:46:56.341510Z",
+     "iopub.status.idle": "2023-12-27T17:46:56.896621Z",
+     "shell.execute_reply": "2023-12-27T17:46:56.896068Z",
+     "shell.execute_reply.started": "2023-12-27T17:46:56.341964Z"
     }
    },
    "outputs": [],
@@ -193,11 +184,11 @@
    "id": "b30dc5b6-24f2-4552-a274-465aab776350",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T18:49:58.918344Z",
-     "iopub.status.busy": "2023-12-05T18:49:58.918176Z",
-     "iopub.status.idle": "2023-12-05T18:49:58.947227Z",
-     "shell.execute_reply": "2023-12-05T18:49:58.946215Z",
-     "shell.execute_reply.started": "2023-12-05T18:49:58.918329Z"
+     "iopub.execute_input": "2023-12-27T17:46:57.207006Z",
+     "iopub.status.busy": "2023-12-27T17:46:57.206425Z",
+     "iopub.status.idle": "2023-12-27T17:46:57.243072Z",
+     "shell.execute_reply": "2023-12-27T17:46:57.241677Z",
+     "shell.execute_reply.started": "2023-12-27T17:46:57.206951Z"
     }
    },
    "outputs": [],
@@ -216,11 +207,11 @@
    "id": "80d179e9-26c9-4f13-88c8-c54d7c1188c0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T18:49:58.947822Z",
-     "iopub.status.busy": "2023-12-05T18:49:58.947672Z",
-     "iopub.status.idle": "2023-12-05T18:50:01.111591Z",
-     "shell.execute_reply": "2023-12-05T18:50:01.110264Z",
-     "shell.execute_reply.started": "2023-12-05T18:49:58.947807Z"
+     "iopub.execute_input": "2023-12-27T17:46:57.637277Z",
+     "iopub.status.busy": "2023-12-27T17:46:57.636097Z",
+     "iopub.status.idle": "2023-12-27T17:46:59.234907Z",
+     "shell.execute_reply": "2023-12-27T17:46:59.233910Z",
+     "shell.execute_reply.started": "2023-12-27T17:46:57.637217Z"
     }
    },
    "outputs": [],
@@ -237,11 +228,11 @@
    "id": "b268cd77-1947-4d88-8e34-b6010345b208",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T18:50:01.113823Z",
-     "iopub.status.busy": "2023-12-05T18:50:01.113283Z",
-     "iopub.status.idle": "2023-12-05T18:50:01.406673Z",
-     "shell.execute_reply": "2023-12-05T18:50:01.405496Z",
-     "shell.execute_reply.started": "2023-12-05T18:50:01.113777Z"
+     "iopub.execute_input": "2023-12-27T17:46:59.236981Z",
+     "iopub.status.busy": "2023-12-27T17:46:59.236588Z",
+     "iopub.status.idle": "2023-12-27T17:46:59.535519Z",
+     "shell.execute_reply": "2023-12-27T17:46:59.534975Z",
+     "shell.execute_reply.started": "2023-12-27T17:46:59.236943Z"
     }
    },
    "outputs": [],
@@ -270,11 +261,11 @@
    "id": "3dacc2ed-62c5-481c-8b0c-9c2b173d8604",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T18:50:01.407385Z",
-     "iopub.status.busy": "2023-12-05T18:50:01.407231Z",
-     "iopub.status.idle": "2023-12-05T18:50:01.532166Z",
-     "shell.execute_reply": "2023-12-05T18:50:01.530989Z",
-     "shell.execute_reply.started": "2023-12-05T18:50:01.407371Z"
+     "iopub.execute_input": "2023-12-27T17:46:59.536358Z",
+     "iopub.status.busy": "2023-12-27T17:46:59.536175Z",
+     "iopub.status.idle": "2023-12-27T17:46:59.660241Z",
+     "shell.execute_reply": "2023-12-27T17:46:59.659714Z",
+     "shell.execute_reply.started": "2023-12-27T17:46:59.536342Z"
     }
    },
    "outputs": [],
@@ -306,17 +297,17 @@
    "id": "dca1d9e1-e9f1-4c5b-b55a-6c80e1f18b67",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T18:50:01.533888Z",
-     "iopub.status.busy": "2023-12-05T18:50:01.533726Z",
-     "iopub.status.idle": "2023-12-05T18:50:01.641965Z",
-     "shell.execute_reply": "2023-12-05T18:50:01.640614Z",
-     "shell.execute_reply.started": "2023-12-05T18:50:01.533874Z"
+     "iopub.execute_input": "2023-12-27T17:46:59.761021Z",
+     "iopub.status.busy": "2023-12-27T17:46:59.760820Z",
+     "iopub.status.idle": "2023-12-27T17:46:59.881186Z",
+     "shell.execute_reply": "2023-12-27T17:46:59.880608Z",
+     "shell.execute_reply.started": "2023-12-27T17:46:59.761003Z"
     }
    },
    "outputs": [],
    "source": [
     "# Subset to relevant columns\n",
-    "cols = ['fd_id', 'occtype', 'found_type', 'cbfips',\n",
+    "cols = ['fd_id', 'occtype', 'found_type', 'cbfips', 'bldgtype',\n",
     "        'ftprntsrc', 'found_ht', 'val_struct', 'sqft',\n",
     "        'val_cont', 'source', 'firmzone', 'ground_elv_m',\n",
     "        'geometry']\n",
@@ -330,15 +321,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "f5fffede-d15f-4a04-8bc0-7865247078a8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-05T18:51:47.518194Z",
-     "iopub.status.busy": "2023-12-05T18:51:47.517635Z",
-     "iopub.status.idle": "2023-12-05T18:51:48.544320Z",
-     "shell.execute_reply": "2023-12-05T18:51:48.543579Z",
-     "shell.execute_reply.started": "2023-12-05T18:51:47.518147Z"
+     "iopub.execute_input": "2023-12-27T17:47:02.766747Z",
+     "iopub.status.busy": "2023-12-27T17:47:02.766472Z",
+     "iopub.status.idle": "2023-12-27T17:47:03.386982Z",
+     "shell.execute_reply": "2023-12-27T17:47:03.386418Z",
+     "shell.execute_reply.started": "2023-12-27T17:47:02.766727Z"
     }
    },
    "outputs": [],
